src/test/deca/context/invalid/test_error_3.63.deca
// Description:
//    Soulève l'erreur (3.63)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : 'boolean' n'est pas compatible avec l'opérateur unaire '!' (règle 3.63)
//
// Historique:
//      cree le 06/01/2022

/*
{
	boolean b;
    b = !true;
}
*/